--- a/engine.html
+++ b/engine.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr" dir="ltr">
+<!-- :encoding=UTF-8:              (for jEdit) -->
   <head>
     <meta charset="utf-8">
     <title>jszlog</title>
